--- a/thesis-webapp-backend/.env
+++ b/thesis-webapp-backend/.env
@@ -8,10 +8,10 @@ PORT=4000
 FRONTEND_URL=http://localhost:3000
 
 # JWT Configuration
-JWT_SECRET=BD373194127845525726B5DFC3217
+JWT_SECRET=
 
 # Google AI API Key
-GOOGLE_AI_API_KEY=AIzaSyBcxNdRW0JKg1SFmqQWwja4Rfwbg3XtSeU
+GOOGLE_AI_API_KEY=
 
 # Email Configuration (Optional - for automated delayed recall reminders)
 EMAIL_HOST=
